fixed button layout on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -802,6 +802,7 @@ td, th {
   color: #fff;
   padding: 0 25px;
   margin-right: 10px;
+  margin-bottom: 10px;
   background: #e45447;
   overflow: hidden;
   border-radius: 40px;
